[package]
name = "osu-recoverer"
version = "0.0.1"
authors = [ "NeutronX" ]
edition = "2021"
description = "Download every map you have ever played"
license = "MIT"
license-file = "LICENSE"

[dependencies]
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
